--- a/config/experiment/up_lvl1.yaml
+++ b/config/experiment/up_lvl1.yaml
@@ -15,7 +15,7 @@ hydra:
   run:
     dir: ${paths.log_dir}/${task_name}/runs/up_lvl1
 
-ckpt_path: ${paths.output_dir}/checkpoints/last.ckpt
+ckpt_path: ${paths.output_dir}/checkpoints/step_370000.ckpt
 
 seed: 501
 
@@ -25,7 +25,7 @@ trainer:
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 4
-  batch_size: 14
+  batch_size: 16
   sample_length: 262144
 
 model:
@@ -43,14 +43,15 @@ model:
     l_max: 65_536
   lr: 5e-5
   # no scheduler -> constant lr
-  # lr_scheduler:
-  #   _target_: cosine_annealing_warmup.CosineAnnealingWarmupRestarts
-  #   first_cycle_steps: 250_000
-  #   cycle_mult: 1.0
-  #   max_lr: 1e-4 # this overwrites the lr parameter
-  #   min_lr: 1e-5
-  #   warmup_steps: 10_000
-  #   gamma: 0.5
+  lr_scheduler:
+    _partial_: true
+    _target_: cosine_annealing_warmup.CosineAnnealingWarmupRestarts
+    first_cycle_steps: 400_000
+    cycle_mult: 0.25
+    max_lr: 5e-5 # this overwrites the lr parameter
+    min_lr: 1e-6
+    warmup_steps: 10_000
+    gamma: 0.5
   num_train_timesteps: 1000
   inference_batch_size: 8
   noise_scheduler:
